# thompson-sampling

./: .envrc  .gitignore  LICENSE  Makefile  pyproject.toml
src/: debug.py
src/agent/: agent.py
src/env/: arm.py  bandit.py
src/prob/: rv.py
src/sim/: plot.py  result.py  sim.py
src/utils/: debug.py  plot.py
tests/: test_bandit_w_single_high.py
