[tool.poetry]
name = "thompson-sampling"
version = "0.1.0"
description = ""
authors = ["Mehmet Aktas <mfatihaktas@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Ref: https://docs.pytest.org/en/4.6.x/reference.html#ini-options-ref
minversion = "6.0"
# addopts = "--capture=no"
# Note: Print only stdout.
# addopts = "-rP -p no:logging"
log_cli = true
# log_cli_level = "DEBUG"
log_cli_level = "INFO"
# Ref: https://docs.python.org/3/library/logging.html#logrecord-attributes
# log_cli_format = "%(levelname)s] %(filename)s:%(lineno)s - %(funcName)s: %(message)s"
testpaths = [
    "tests",
]
